Make Minor General Changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>DJ Portfolio</title>
+	<title>Rebrand-it</title>
 	<meta name="description" content=" Danny Portfolio Website">
 	<meta name="author" content="Danny Juan">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,10 +37,10 @@
 			<a href="index.html"><img src="images/logo.jpg" alt="Rebrandit Logo"></a>
 			<div class="twelve columns">
 			<nav>
-				<a href="index.html" class="navHome">Home</a>
-				<a href="about.html" class="navAbout">About</a>
-				<a href="contact.html" class="navContact">Contact</a>
-				<a href="work.html" class="navPort">Work</a>
+				<a href="index.html" class="navHome">HOME</a>
+				<a href="about.html" class="navAbout">ABOUT</a>
+				<a href="contact.html" class="navContact">CONTACT</a>
+				<a href="work.html" class="navPort">OUR WORK</a>
 			</nav>
 			</div>
 		</div>
@@ -49,7 +49,7 @@
 	<div class="row">
 		<div class="container">
 			<div class="three columns">
-				<ul style="text-align: right">
+				<ul class="l-list-position" style="list-style-type:none">
 					<li>I.D Sign Change</li>
 					<li>LED Pricers </li>
 					<li>Fascia Installs</li>
@@ -62,7 +62,7 @@
 				<img src="images/h1.jpg" alt="gas station"/>
 			</div>
 			<div class="three columns">
-				<ul>
+				<ul style="list-style-type:none">
 					<li>Curb Repair</li>
 					<li>Light Service</li>
 					<li>Canopy Repair</li>
