--- a/about.html
+++ b/about.html
@@ -2,61 +2,61 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>DJ Portfolio</title>
+	<title>About</title>
 	<meta name="description" content=" Danny Portfolio Website">
-	<meta name="author" content="Danny Juan">	
+	<meta name="author" content="Danny Juan">
 <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- FONT
 -–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  
+
 <!-- CSS
 -–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/skeleton.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-	integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" 
+	integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
 	crossorigin="anonymous">
-	<link rel="stylesheet" href="css/magnific-popup.css"> 
-	
+	<link rel="stylesheet" href="css/magnific-popup.css">
+
 <!-- Scripts
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->  
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	
+
 <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </head>
 
 <body>
-	<header class="main_nav">		
+	<header class="main_nav">
 		<div class="container">
 			<a href="index.html"><img src="images/logo.jpg" alt="Rebrandit Logo"></a>
 			<div class="twelve columns">
 			<nav>
-				<a href="index.html" class="navHome">Home</a>
-				<a href="about.html" class="navAbout">About</a> 
-				<a href="contact.html" class="navContact">Contact</a>
-				<a href="work.html" class="navPort">Work</a>
+				<a href="index.html" class="navHome">HOME</a>
+				<a href="about.html" class="navAbout">ABOUT</a>
+				<a href="contact.html" class="navContact">CONTACT</a>
+				<a href="work.html" class="navPort">OUR WORK</a>
 			</nav>
 			</div>
 		</div>
 	</header>
-	
+
 	<div class="row">
 		<div class="container">
 			<div class="twelve columns">
-				<p style="text-align: center;">Based in Fort Myers, Fl ReBrandit, LLC is a petroleum industry service company providing complete imaging solutions in Florida & Georgia. We specialize in Marketing Upgrades, Rebranding, Canopy Repair, Lighting, Remodeling the exteriors of service stations, convenience stores & car washes. 
+				<p style="text-align: center;">Based in Fort Myers, Fl ReBrandit, LLC is a petroleum industry service company providing complete imaging solutions in Florida & Georgia. We specialize in Marketing Upgrades, Rebranding, Canopy Repair, Lighting, Remodeling the exteriors of service stations, convenience stores & car washes.
 				</p>
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="container main">
 	<div class="row">
-		
+
 		<div class="four columns portfolio">
 			<img src="images/derrik.jpg"/>
 			<p>Derrik is instrumental in the development of ReBrandit,LLC. In the last quarter of 2000, he started BP Re-image Program in Atlanta, Georgia. It included ordering and installing of the main I.D. sign, canopies, dispensers, and building re-branding. Derrik managed crews in Ohio, Kentucky, Indiana, and West Virginia, rebranding BP, Marathon, Shell, Chevron, Texaco, Mobil, Exxon, and Valero from start to finish. He has also rebranded Chevrolet, Toyota, & Nissan dealerships as well as McDonald's, KFC, and Taco Bell restaurants. His greatest strengths are paying attention to detail & getting the job done.</p>
@@ -74,7 +74,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div class="row">
 		<div class="four columns portfolio">
 			<img src="images/james.jpg"/>
@@ -117,20 +117,20 @@
 		</div>
 	</div>
 	</div><!-- Container-->
-	
+
 	<footer>
 		<div class="container">
 			<div class="row twelve columns" style="padding-top: 2%">
 				<h2 class="footer">ReBrandit, LLC</h2>
 				<p class="footer">
 				<strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, Fl 33907 <br> Phone: 239-887-4418 | (800)482-3460 <br>
-				Fax: 239-887-4363 <br> email: mike@rebrand-it.com</p>				
+				Fax: 239-887-4363 <br> email: mike@rebrand-it.com</p>
 			</div>
 			<div class="row twelve columns">
 				<p class="copyright">&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
 			</div>
-		</div>	
-	</footer>	
-	
+		</div>
+	</footer>
+
 </body>
 </html>
