--- a/contact.html
+++ b/contact.html
@@ -1,66 +1,64 @@
 <!DOCTYPE html>
 
-<!--------------------------------------------------TEMPLATE-------------------------------------------------->
-
 <html>
 
 <head>
 	<meta charset="utf-8">
-	<title>DJ Portfolio</title>
+	<title>Contact</title>
 	<meta name="description" content=" Danny Portfolio Website">
-	<meta name="author" content="Danny Juan">	
+	<meta name="author" content="Danny Juan">
 <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- FONT
 -–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  
+
 <!-- CSS
 -–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/skeleton.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-	integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" 
+	integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
 	crossorigin="anonymous">
-	<link rel="stylesheet" href="css/magnific-popup.css"> 
-	
+	<link rel="stylesheet" href="css/magnific-popup.css">
+
 <!-- Scripts
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->  
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	
+
 <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </head>
-	
+
 <body>
-	<header class="main_nav">		
+	<header class="main_nav">
 		<div class="container">
 			<a href="index.html"><img src="images/logo.jpg" alt="Rebrandit Logo"></a>
 			<div class="twelve columns">
 			<nav>
-				<a href="index.html" class="navHome">Home</a>
-				<a href="about.html" class="navAbout">About</a> 
-				<a href="contact.html" class="navContact">Contact</a>
-			  <a href="work.html" class="navPort">Work</a> 			
+				<a href="index.html" class="navHome">HOME</a>
+				<a href="about.html" class="navAbout">ABOUT</a>
+				<a href="contact.html" class="navContact">CONTACT</a>
+				<a href="work.html" class="navPort">OUR WORK</a>
 			</nav>
 			</div>
 		</div>
 	</header>
-	
 
-	
-	
+
+
+
 	<div class="container">
 		<div class="row twelve columns" style="padding-top: 2%">
 			<h2 class="footer">ReBrandit, LLC</h2>
 			<p class="footer">
 			<strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, Fl 33907 <br> Phone: 239-887-4418 | (800)482-3460 <br>
-			Fax: 239-887-4363 <br> email: mike@rebrand-it.com</p>				
+			Fax: 239-887-4363 <br> email: mike@rebrand-it.com</p>
 		</div>
 	</div>
-	
+
 	<div class="row">
 		<div class="contact">
 			<form>
@@ -72,7 +70,7 @@
 					<div class="six columns">
 					  <label for="exampleEmailInput">Your email</label>
 					  <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
-					</div>				
+					</div>
 				</div>
 				<label for="exampleMessage">Message</label>
 				<textarea class="u-full-width" placeholder="Hello! …" id="exampleMessage"></textarea>
@@ -80,15 +78,15 @@
 			</form>
 		</div>
 	</div>
-	
+
 	<footer>
 		<div class="container">
 		<div class="row twelve columns">
 			<p class="copyright"><br>&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
 		</div>
 		</div>
-	</footer>	
-	
+	</footer>
+
 <script src="scripts/jquery.magnific-popup.js"></script>
 <script type="text/javascript">
 	$('.image-link').magnificPopup({
@@ -112,8 +110,8 @@
   }
 
 });
-</script>	
-	
+</script>
+
 </body>
-	
+
 </html>
