--- a/work.html
+++ b/work.html
@@ -2,52 +2,52 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>DJ Portfolio</title>
+	<title>Our Work</title>
 	<meta name="description" content=" Danny Portfolio Website">
-	<meta name="author" content="Danny Juan">	
+	<meta name="author" content="Danny Juan">
 <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- FONT
 -–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  
+
 <!-- CSS
 -–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/skeleton.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-	integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" 
+	integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
 	crossorigin="anonymous">
-	<link rel="stylesheet" href="css/magnific-popup.css"> 
-	
+	<link rel="stylesheet" href="css/magnific-popup.css">
+
 <!-- Scripts
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->  
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	
+
 <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </head>
 
 <body>
-	<header class="main_nav">		
+	<header class="main_nav">
 		<div class="container">
 			<a href="index.html"><img src="images/logo.jpg" alt="Rebrandit Logo"></a>
 			<div class="twelve columns">
 			<nav>
-				<a href="index.html" class="navHome">Home</a>
-				<a href="about.html" class="navAbout">About</a> 
-				<a href="contact.html" class="navContact">Contact</a>
-				<a href="work.html" class="navPort">Work</a>
+				<a href="index.html" class="navHome">HOME</a>
+				<a href="about.html" class="navAbout">ABOUT</a>
+				<a href="contact.html" class="navContact">CONTACT</a>
+				<a href="work.html" class="navPort">OUR WORK</a>
 			</nav>
 			</div>
 		</div>
 	</header>
-	
+
 	<div class="container main">
 	<div class="row">
-		
+
 		<div class="six columns portfolio">
 			<img src="images/w1.jpg"/>
 			<p>Before</p>
@@ -59,7 +59,7 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div class="row">
 		<div class="six columns portfolio">
 			<img src="images/w3.jpg"/>
@@ -72,7 +72,7 @@
 			<p>
 			After
 			</p>
-		</div>		
+		</div>
 	</div>
 
 	<div class="row">
@@ -83,28 +83,28 @@
 			<img src="images/w6.jpg"/>
 		</div>
 	</div>
-		
+
 	<div class="row">
 		<div class="four columns portfolio">
 			<img src="images/w7.jpg"/>
 		</div>
-	</div> 
-		
+	</div>
+
 	</div><!-- Container-->
-	
+
 	<footer>
 		<div class="container">
 			<div class="row twelve columns" style="padding-top: 2%">
 				<h2 class="footer">ReBrandit, LLC</h2>
 				<p class="footer">
 				<strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, Fl 33907 <br> Phone: 239-887-4418 | (800)482-3460 <br>
-				Fax: 239-887-4363 <br> email: mike@rebrand-it.com</p>				
+				Fax: 239-887-4363 <br> email: mike@rebrand-it.com</p>
 			</div>
 			<div class="row twelve columns">
 				<p class="copyright">&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
 			</div>
-		</div>	
-	</footer>	
-	
+		</div>
+	</footer>
+
 </body>
 </html>
