styled up and added interactivity to nav

--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 
-<!--------------------------------------------------TEMPLATE-------------------------------------------------->
-
 <html>
 
 <head>
 	<meta charset="utf-8">
-	<title>DJ Portfolio</title>
+	<title>ReBrandit | Contact</title>
 	<meta name="description" content=" Danny Portfolio Website">
 	<meta name="author" content="Danny Juan">	
 <!-- Mobile Specific Metas
@@ -39,11 +37,11 @@
 		<div class="container">
 			<a href="index.html"><img src="images/logo.jpg" alt="Rebrandit Logo"></a>
 			<div class="twelve columns">
-			<nav>
-				<a href="index.html" class="navHome">Home</a>
-				<a href="about.html" class="navAbout">About</a> 
-				<a href="contact.html" class="navContact">Contact</a>
-			  <a href="work.html" class="navPort">Work</a> 			
+			<nav style="border: 2px solid black">
+				<a href="index.html" class="nav">Home</a>|
+				<a href="about.html" class="nav">About</a>|
+				<a href="contact.html" class="nav">Contact</a>|
+				<a href="work.html" class="nav">Work</a>
 			</nav>
 			</div>
 		</div>
