--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 
-<!--------------------------------------------------TEMPLATE-------------------------------------------------->
-
 <html>
 
 <head>
 	<meta charset="utf-8">
-	<title>DJ Portfolio</title>
+	<title>ReBrandit | Home</title>
 	<meta name="description" content=" Danny Portfolio Website">
 	<meta name="author" content="Danny Juan">	
 <!-- Mobile Specific Metas
@@ -32,6 +30,7 @@
 	
 <!-- Favicon
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+	<link rel="icon" type="image/jpg" href="images/logo.jpg">
 	
 </head>
 	
@@ -40,11 +39,11 @@
 		<div class="container">
 			<a href="index.html"><img src="images/logo.jpg" alt="Rebrandit Logo"></a>
 			<div class="twelve columns">
-			<nav>
-				<a href="index.html" class="navHome">Home</a>
-				<a href="about.html" class="navAbout">About</a> 
-				<a href="contact.html" class="navContact">Contact</a>
-				<a href="work.html" class="navPort">Work</a>
+			<nav style="border: 2px solid black">
+				<a href="index.html" class="nav">Home</a>|
+				<a href="about.html" class="nav">About</a>|
+				<a href="contact.html" class="nav">Contact</a>|
+				<a href="work.html" class="nav">Work</a>
 			</nav>
 			</div>
 		</div>
@@ -52,8 +51,8 @@
 	
 	<div class="row">
 		<div class="container">
-			<div class="three columns">
-				<ul style="text-align: right">
+			<div class="two columns">
+				<ul>
 					<li>I.D Sign Change</li>
 					<li>LED Pricers </li>
 					<li>Fascia Installs</li>
@@ -62,10 +61,10 @@
 					<li>Any Repairs</li>
 				</ul>
 			</div>
-			<div class="six columns">
+			<div class="eight columns">
 				<img src="images/h1.jpg" alt="gas station"/>
 			</div>
-			<div class="three columns">
+			<div class="two columns">
 				<ul>
 					<li>Curb Repair</li>
 					<li>Light Service</li>
