--- a/work.html
+++ b/work.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>DJ Portfolio</title>
+	<title>Rebrandit | Work</title>
 	<meta name="description" content=" Danny Portfolio Website">
 	<meta name="author" content="Danny Juan">	
 <!-- Mobile Specific Metas
@@ -35,11 +35,11 @@
 		<div class="container">
 			<a href="index.html"><img src="images/logo.jpg" alt="Rebrandit Logo"></a>
 			<div class="twelve columns">
-			<nav>
-				<a href="index.html" class="navHome">Home</a>
-				<a href="about.html" class="navAbout">About</a> 
-				<a href="contact.html" class="navContact">Contact</a>
-				<a href="work.html" class="navPort">Work</a>
+			<nav style="border: 2px solid black">
+				<a href="index.html" class="nav">Home</a>|
+				<a href="about.html" class="nav">About</a>|
+				<a href="contact.html" class="nav">Contact</a>|
+				<a href="work.html" class="nav">Work</a>
 			</nav>
 			</div>
 		</div>
