moved nav above logo
also made logo smaller

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 	
 <body>
 	<header class="main_nav">		
-		<div class="container">
-			<a href="index.html"><img src="images/logo.jpg" alt="Rebrandit Logo"></a>
+		<div class="container">			
 			<div class="twelve columns">
-			<nav style="border: 2px solid black">
+			<nav style="border: 2px solid black" style>
 				<a href="index.html" class="nav">Home</a>|
 				<a href="about.html" class="nav">About</a>|
 				<a href="contact.html" class="nav">Contact</a>|
 				<a href="work.html" class="nav">Work</a>
 			</nav>
+			<a href="index.html" class="logo"><img src="images/logo.jpg" alt="Rebrandit Logo" class="logo"></a>	
 			</div>
 		</div>
 	</header>
