--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			<div class="row twelve columns" style="padding-top: 2%">
 				<h2 class="footer">ReBrandit, LLC</h2>
 				<p class="footer">
-				<strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, Fl 33907 <br> Phone: 239-887-4418 | (800)482-3460 <br>
+				<strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br> Phone: 239-887-4418 | (800)-482-3460 <br>
 				Fax: 239-887-4363 <br> email: mike@rebrand-it.com</p>
 			</div>
 			<div class="row twelve columns">
