adjusted nav / added some media queries

--- a/about.html
+++ b/about.html
@@ -34,16 +34,25 @@
 	<header class="main_nav">		
 		<div class="container">			
 			<div class="twelve columns">
-			<nav style="border: 2px solid black" style>
-				<a href="index.html" class="nav">Home</a>|
-				<a href="about.html" class="nav">About</a>|
-				<a href="contact.html" class="nav">Contact</a>|
+			<nav>
+				<a href="index.html" class="nav">Home</a>
+				<a href="about.html" class="nav">About</a>
+				<a href="contact.html" class="nav">Contact</a>
 				<a href="work.html" class="nav">Work</a>
 			</nav>
-			<a href="index.html" class="logo"><img src="images/logo.jpg" alt="Rebrandit Logo" class="logo"></a>	
+			
 			</div>
 		</div>
 	</header>
+	
+	<div class="row">
+		<div class="container">			
+			<div class="twelve columns">
+				<a href="index.html" class="logo"><img src="images/logo.jpg" alt="Rebrandit Logo" class="logo"></a>
+				<p style=" color: blue; text-align: center; font-size: 1.5em">When It's Time to Change Your image  </p>
+			</div>
+		</div>
+	</div>
 	
 	<div class="row">
 		<div class="container">
