--- a/index.html
+++ b/index.html
@@ -38,21 +38,33 @@
 	<header class="main_nav">		
 		<div class="container">			
 			<div class="twelve columns">
-			<nav style="border: 2px solid black" style>
-				<a href="index.html" class="nav">Home</a>|
-				<a href="about.html" class="nav">About</a>|
-				<a href="contact.html" class="nav">Contact</a>|
+			<nav>
+				<a href="index.html" class="nav">Home</a>
+				<a href="about.html" class="nav">About</a>
+				<a href="contact.html" class="nav">Contact</a>
 				<a href="work.html" class="nav">Work</a>
 			</nav>
-			<a href="index.html" class="logo"><img src="images/logo.jpg" alt="Rebrandit Logo" class="logo"></a>	
+			
 			</div>
 		</div>
 	</header>
 	
 	<div class="row">
+		<div class="container">			
+			<div class="twelve columns">
+				<a href="index.html" class="logo"><img src="images/logo.jpg" alt="Rebrandit Logo" class="logo"></a>
+				<p style=" color: blue; text-align: center; font-size: 1.5em">When It's Time to Change Your image  </p>
+			</div>
+		</div>
+	</div>
+		
+	<div class="row">
+		<h2>
+		Services
+		</h2>
 		<div class="container">
-			<div class="two columns">
-				<ul style="list-style-type: none">
+			<div class="six columns">
+				<ul class="services_l serv_left">
 					<li>I.D Sign Change</li>
 					<li>LED Pricers </li>
 					<li>Fascia Installs</li>
@@ -61,11 +73,8 @@
 					<li>Any Repairs</li>
 				</ul>
 			</div>
-			<div class="eight columns">
-				<img src="images/h1.jpg" alt="gas station"/>
-			</div>
-			<div class="two columns">
-				<ul style="list-style-type: none">
+			<div class="six columns">
+				<ul class="services_r serv_right">
 					<li>Curb Repair</li>
 					<li>Light Service</li>
 					<li>Canopy Repair</li>
@@ -73,6 +82,14 @@
 					<li>Channel Letters</li>
 					<li>Any Modification</li>
 				</ul>
+			</div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="container">
+			<div class="twelve columns">
+				<img src="images/h1.jpg" alt="gas station" style="width: %"/>
 			</div>
 		</div>
 	</div>
