--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Rebrand-it</title>
-	<meta name="description" content=" Danny Portfolio Website">
-	<meta name="author" content="Danny Juan">
+	<meta name="description" content="">
+	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- FONT
