change placeholder for email input field on contact form

--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
 					</div>
 					<div class="six columns">
 					  <label for="exampleEmailInput">Your email</label>
-					  <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
+					  <input class="u-full-width" type="email" placeholder="johndoe@example.com" id="exampleEmailInput">
 					</div>				
 				</div>
 				<label for="exampleMessage">Message</label>
