Fix Spelling and Grammar

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div class="container">			
 			<div class="twelve columns">
 				<a href="index.html" class="logo"><img src="images/logo.jpg" alt="Rebrandit Logo" class="logo"></a>
-				<p style=" color: blue; text-align: center; font-size: 1.5em">When It's Time to Change Your image  </p>
+				<p style=" color: blue; text-align: center; font-size: 1.5em">When It's Time to Change Your Image  </p>
 			</div>
 		</div>
 	</div>
