--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 		<div class="container">			
 			<div class="twelve columns">
 				<a href="index.html" class="logo"><img src="images/logo.jpg" alt="Rebrandit Logo" class="logo"></a>
-				<p style=" color: blue; text-align: center; font-size: 1.5em">When It's Time to Change Your image  </p>
+				<p style=" color: blue; text-align: center; font-size: 1.5em">When It's Time to Change Your Image  </p>
 			</div>
 		</div>
 	</div>
@@ -115,7 +115,7 @@
 		<div class="four columns portfolio">
 			<img src="images/ken.jpg"/>
 			<p>
-			Ken has more than 30 years experience in the construction industry and is an all around construcion and painting expert.
+			Ken has more than 30 years experience in the construction industry and is an all around construction and painting expert.
 			</p>
 		</div>
 		<div class="four columns portfolio">
@@ -132,7 +132,7 @@
 			<div class="row twelve columns" style="padding-top: 2%">
 				<h2 class="footer">ReBrandit, LLC</h2>
 				<p class="footer">
-				<strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, Fl 33907 <br> Phone: 239-887-4418 | (800)482-3460 <br>
+				<strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br> Phone: 239-887-4418 | (800)-482-3460 <br>
 				Fax: 239-887-4363 <br> email: mike@rebrand-it.com</p>				
 			</div>
 			<div class="row twelve columns">
