--- a/contact.html
+++ b/contact.html
@@ -60,8 +60,7 @@
 		<div class="row twelve columns" style="padding-top: 2%">
 			<h2 class="footer">ReBrandit, LLC</h2>
 			<p class="footer">
-			<strong style="color: red;">"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br> Phone: 239-887-4418 | (800)-482-3460 <br>
-			Fax: 239-887-4363 <br> email: mike@rebrand-it.com</p>				
+						
 		</div>
 	</div>
 	
@@ -88,7 +87,9 @@
 	<footer>
 		<div class="container">
 		<div class="row twelve columns">
-			<p class="copyright"><br>&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
+            <p><strong style="color: red";>"MAKING YOU MONEY IS OUR BUSINESS"</strong><br>12811 Kenwood Ln. STE 209,  Ft. Myers, FL 33907 <br>  Phone: <a href="tel:2398874418">239-887-4418</a> | <a href="tel:8004823460">(800)-482-3460</a> <br>
+                Fax: 239-887-4363 <br> email: <a href="mailto:mike@rebrand-it.com">mike@rebrand-it.com</p></a>				
+            <p class="copyright"><br>&copy; 2018 ReBrandit, LLC All Rights Reserved.</p>
 		</div>
 		</div>
 	</footer>	
